[tool.poetry]
name = "xplainet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.3.0"
tensorflow-addons = "0.11.2"
scikit-learn = "0.23.2"

[tool.poetry.dev-dependencies]
pytest = "6.0.2"
notebook = "6.1.4"
ipywidgets = "7.5.1"
requests = "2.24.0"
matplotlib = "3.3.2"
numpy = "1.19.2" 
pandas = "1.1.2" 
nb-black = "1.0.7"
black = "20.8b1"
jupyter_contrib_nbextensions = "0.5.1"

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"
