[tool.poetry]
name = "xplainet"
version = "0.1.1"
description = "Explainable Neural network in Keras"
authors = ["Hartorn <hartorn.github@gmail.com>"]
homepage = "https://github.com/Hartorn/XplaiNet"
repository = "https://github.com/Hartorn/XplaiNet"
documentation = "https://github.com/Hartorn/XplaiNet"
readme = "README.md"
keywords = ["xplainet", "keras", "neural-networks" ]
exclude = []


[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.3.1"
tensorflow-addons = "0.11.2"
scikit-learn = "0.23.2"

[tool.poetry.dev-dependencies]
pytest = "6.1.2"
notebook = "6.1.5"
ipywidgets = "7.5.1"
requests = "2.25.0"
matplotlib = "3.3.3"
pandas = "1.5.3" 
nb-black = "1.0.7"
black = "20.8b1"
jupyter_contrib_nbextensions = "0.5.1"

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"
